# ProtoGlue

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
data/: README.md
docs/: api.rst  conf.py  index.rst  installation.rst  quickstart.rst  requirements.txt  tutorials.rst
docs/_static/: custom.css
docs/tutorials/: tutorial_human_breast_cancer.ipynb  tutorial_mouse_brain.ipynb
examples/: minimal_example.py
protoglue/: __init__.py  api.py  config.py
protoglue/data/: __init__.py  graph.py  io.py  preprocessing.py  utils.py
protoglue/losses/: __init__.py  clustering.py  smooth.py  total.py  vicreg.py
protoglue/models/: __init__.py  attention.py  decoders.py  encoders.py  layers.py  model.py
protoglue/plotting/: __init__.py  colors.py  figures.py  ppt_generator.py  theme.py  utils.py
protoglue/training/: __init__.py  callbacks.py  k_selection.py  trainer.py
results/: README.md
scripts/: run_hbc.py  run_hln.py  run_mbrain.py
tests/: test_import.py
tutorials/: tutorial_human_breast_cancer.ipynb  tutorial_human_lymph_node.ipynb
