[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protoglue"
version = "0.1.0"
description = "ProtoGlue: Graph-based deep learning for spatial multi-omics integration and spatial domain identification"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Xuan Guo" },
    { name = "Xuewei Xian" },
    { name = "Siyi Wu" },
    { name = "Yanqin Wang" },
    { name = "Lanyue Zhang" },
    { name = "Wei Liu", email = "liuwei8@scu.edu.cn" },
]
keywords = [
    "spatial multi-omics",
    "spatial transcriptomics",
    "graph neural networks",
    "deep learning",
    "multi-omics integration",
    "spatial domain identification",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=1.12.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scanpy>=1.9.0",
    "anndata>=0.8.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
pptx = ["python-pptx>=0.6.21", "Pillow>=8.0.0"]
docs = ["sphinx", "sphinx-rtd-theme", "nbsphinx", "pandoc"]
dev = ["pytest", "black", "flake8"]

[project.urls]
Homepage = "https://github.com/QuinnGuo-code/ProtoGlue"
Repository = "https://github.com/QuinnGuo-code/ProtoGlue"
"Bug Tracker" = "https://github.com/QuinnGuo-code/ProtoGlue/issues"

[tool.setuptools.packages.find]
include = ["protoglue*"]
